Change index. Add basic data of mysql workbench of 'desenvolvedor'. Add alocation creation.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,12 +6,19 @@
         "**/CVS": true,
         "**/.DS_Store": true,
         "**/Thumbs.db": true,
-        "readme.md": true,
-        ",gitignore": true,
+        "README.md": true,
+        ".gitignore": true,
+        // "proj": true,
+        "dev": true,
+        "aloc": true,
+        // "*.css": true
         // "**/*.php": true,
+        //  "**/*.php": true,
          "*.php": true,
-        // "**/*.css": true,
-        "**/*.html": true,
-        "classes": true,
+        "**/*.css": true,
+        "*.css": true,
+        "*.webp": true,
+        // "**/*.html": true,
+        // "classes": true,
     }
 }
