Added "My" class (Utility).
Change return page of create/update a bean to "../list".

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,12 +8,14 @@
         "**/Thumbs.db": true,
         "README.md": true,
         ".gitignore": true,
-        // "proj": true,
-        // "dev": true,
+        ".vscode": true,
+        "proj": true,
+        "dev": true,
         // "aloc": true,
-        // ".scss": true
+        "_scss": true,
+        "_css": true,
         // "**/*.php": true,
-        //  "*.php": true,
+         "*.php": true,
         //  "index.php": true,
          "rb-mysql.php": true,
         // "**/.scss": true,
@@ -27,6 +29,7 @@
         "*.txt": true,
         // "**/*.html": true,
         // "classes": true,
+        "project-manager.code-workspace": true,
     },
     "liveSassCompile.settings.formats": [{
         "format": "expanded",
