My::CheckDate fixed.
dev/create/validate.php fixed.

empty style="" cleaned.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,12 +10,13 @@
         ".gitignore": true,
         ".vscode": true,
         "proj": true,
-        "dev": true,
-        // "aloc": true,
+        // "dev": true,
+        "aloc": true,
         "_scss": true,
         "_css": true,
         // "**/*.php": true,
-         "*.php": true,
+        // "*.php": true,
+        "function.php": false,
         //  "index.php": true,
          "rb-mysql.php": true,
         // "**/.scss": true,
