changed from GET to POST on aloc.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,14 +9,13 @@
         "README.md": true,
         ".gitignore": true,
         ".vscode": true,
-        "proj": true,
-        // "dev": true,
+        // "proj": true,
+        "dev": true,
         "aloc": true,
         "_scss": true,
         "_css": true,
         // "**/*.php": true,
-        // "*.php": true,
-        "function.php": false,
+        "*.php": true,
         //  "index.php": true,
          "rb-mysql.php": true,
         // "**/.scss": true,
