link "Voltar" added.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,9 +9,9 @@
         "README.md": true,
         ".gitignore": true,
         ".vscode": true,
+        // "aloc": true,
+        // "dev": true,
         // "proj": true,
-        "dev": true,
-        "aloc": true,
         "_scss": true,
         "_css": true,
         // "**/*.php": true,
