--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,8 +10,8 @@
         ".gitignore": true,
         ".vscode": true,
         // "aloc": true,
-        // "dev": true,
-        // "proj": true,
+        "dev": true,
+        "proj": true,
         "_scss": true,
         "_css": true,
         // "**/*.php": true,
