link "voltar" changed.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,13 +9,13 @@
         "README.md": true,
         ".gitignore": true,
         ".vscode": true,
-        // "aloc": true,
+        "aloc": true,
         "dev": true,
         "proj": true,
-        "_scss": true,
-        "_css": true,
+        // "_scss": true,
+        // "_css": true,
         // "**/*.php": true,
-        // "*.php": true,
+        "*.php": true,
         //  "index.php": true,
          "rb-mysql.php": true,
         // "**/.scss": true,
