Delete bean now send the browser to "list".

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,9 +9,9 @@
         "README.md": true,
         ".gitignore": true,
         ".vscode": true,
-        "aloc": true,
+        "aloc": false,
         "dev": false,
-        "proj": true,
+        "proj": false,
         "_css": true,
         "_scss": true,
         "*.php": true,
