--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,15 +9,16 @@
         "README.md": true,
         ".gitignore": true,
         ".vscode": true,
-        "aloc": false,
-        "dev": false,
-        "proj": false,
-        "_css": true,
-        "_scss": true,
-        "*.php": true,
+        "aloc": true,
+        "dev": true,
+        "proj": true,
+        "_css": false,
+        "_scss": false,
+        "*.php": false,
         "rb-mysql.php": true,
         "**/*.css.map": true,
         "*.webp": true,
+        "*.png": true,
         "sla.*": true,
         "*.txt": true,
         "project-manager.code-workspace": true
