--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,8 +12,8 @@
         "aloc": true,
         "dev": true,
         "proj": true,
-        "_css": false,
-        "_scss": false,
+        "_css": true,
+        "_scss": true,
         "*.php": false,
         "rb-mysql.php": true,
         "**/*.css.map": true,
