--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,8 +13,8 @@
         "dev": true,
         "proj": true,
         "_css": true,
-        "_scss": true,
-        "*.php": false,
+        "_scss": false,
+        "*.php": true,
         "rb-mysql.php": true,
         "**/*.css.map": true,
         "*.webp": true,
