--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,12 +10,12 @@
         ".gitignore": true,
         ".vscode": true,
         "aloc": true,
-        "dev": true,
+        "dev": false,
         "proj": true,
         "_css": true,
-        "_scss": false,
-        "*.php": true,
-        "rb-mysql.php": true,
+        "_scss": true,
+        "*.php": false,
+        "rb-mysql.php": false,
         "**/*.css.map": true,
         "*.webp": true,
         "*.png": true,
