--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,14 +8,21 @@
         "**/Thumbs.db": true,
         "README.md": true,
         ".gitignore": true,
+        ".github": true,
         ".vscode": true,
         "aloc": false,
         "dev": false,
         "proj": false,
+        "task": false,
+        "**/create": true,
+        "**/delete": false,
+        "**/list": true,
+        "**/read": true,
+        "**/update": true,
         "_css": true,
         "_scss": true,
-        "*.php": false,
-        "rb-mysql.php": false,
+        "*.php": true,
+        "rb-mysql.php": true,
         "**/*.css.map": true,
         "*.webp": true,
         "*.png": true,
