--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,10 +10,10 @@
         ".gitignore": true,
         ".github": true,
         ".vscode": true,
-        "aloc": false,
+        "aloc": true,
         "dev": false,
-        "proj": false,
-        "task": false,
+        "proj": true,
+        "task": true,
         "**/create": true,
         "**/delete": false,
         "**/list": true,
@@ -22,7 +22,7 @@
         "_css": true,
         "_scss": true,
         "*.php": true,
-        "rb-mysql.php": true,
+        "rb-mysql.php": false,
         "**/*.css.map": true,
         "*.webp": true,
         "*.png": true,
